test: using three mesh ui

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "@react-three/uikit": "^0.6.2",
     "@react-three/uikit-apfel": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "three-mesh-ui": "^6.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
